feat(healthcheck): changing healthcheck repsonse (#48)
